# word-count

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/calculations/: calculations.rs  counts.rs  mod.rs  timer.rs
src/docx/: loader.rs
src/entities/: mod.rs  wordcountapp.rs  wordcountfile.rs
src/ui/: mod.rs  slint_ui.rs  ui.rs
wix/: main.wxs
