[package]
name = "word-count"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
slint-macros = "1.3.2"
words-count = "0.1.6"
chrono = "0.4.31"
docx-rs = "0.4.7"
native-dialog = "0.7.0"
dotext = "0.1.1"
